# Arcaferry

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
doc/: API.md  DEPLOYMENT.md  LITE.md  README.md
extension/: manifest.json
extension/background/: service-worker.js
extension/content/: chat-page.js  share-page.js
extension/dev/: verify-mapping.mjs
extension/lib/: ccv3.js  parser.js  png-embed.js
extension/popup/: popup.css  popup.html  popup.js
scripts/: README.md  extract_hidden.py  sidecar_sleep.py
src-tauri/: Cargo.toml
src-tauri/src/: arcamage.rs  browser_sidecar.rs  ccv3.rs  cookies.rs  error.rs  http.rs  lib.rs  png.rs  png_export.rs  server.rs  session.rs
src-tauri/src/adapters/: mod.rs  quack.rs
src-tauri/tests/: api_batch_test.rs  api_import_test.rs  api_preview_test.rs  api_scrape_test.rs  api_status_test.rs
src-tauri/tests/common/: http.rs  mock_quack.rs  mod.rs
